# hilti-slam-challenge-pipeline

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.window  Dockerfile.windows.cpu  Dockerfile.windows.gpu  Dockerfile.workspace  README.md  pipeline.py  pyproject.toml  requirements-window.txt  requirements.txt  runtime_backend.py
container_defs/: window.def  windows_cpu.def  windows_gpu.def  workspace.def
data/floor_1/: floorplan_offset.txt
pictures/GroundingDINO_out/: bb.npy
pictures/input/: flip_image.py
stages/: __init__.py  _geometry.py  align.py  all.py  base.py  clean.py  combined_align.py  combined_overlay.py  convert.py  example_custom.py  final_eval.py  final_output.py  floorplan_align.py  floorplan_edges.py  floorplan_overlay.py  image_selector.py  line_extractor.py  line_extractor_runner.py  overlay_common.py  pca_align.py  plot_path.py  rays.py  save_tf.py  save_tf_runner.py  slam.py  slam_runner.py  stitch.py  trajectory_utils.py  window_align.py  window_common.py  window_dino.py  window_overlay.py  window_pose.py  window_rectify.py  window_sam.py  windows.py  windows_dino.py  windows_extract.py  windows_rectify.py  windows_rosbag.py  (+1 more)
stages/scripts/windows/: extract_ros_frame.py  run_grounding_dino.py  run_rectify.py  run_sam3.py
