[project]
name = "hilti-slam-pipeline"
version = "0.1.0"
description = "Containerized pipeline for the Hilti-Trimble SLAM Challenge 2026"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
slam-pipeline = "pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "/pipeline.py",
    "/runtime_backend.py",
    "/stages",
]

[tool.hatch.build.targets.sdist]
include = [
    "/pipeline.py",
    "/runtime_backend.py",
    "/stages",
    "/README.md",
    "/requirements.txt",
    "/pyproject.toml",
    "/Dockerfile.workspace",
    "/container_defs",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
